<resources>
    <string name="app_name">HookMiui13</string>
    <string name="prefs_title_update">系统更新(7.6.6)</string>
    <string name="prefs_summary_block_update">屏蔽系统版本的更新请求</string>
    <string name="prefs_title_block_update">屏蔽更新</string>
    <string name="prefs_title_security">手机管家(6.2.0–220428.0.2)</string>
    <string name="prefs_summary_remove_wait">移除高度敏感功能的等待时间</string>
    <string name="prefs_title_remove_wait">移除等待</string>
    <string name="prefs_title_mms">短信(13.3.8.4)</string>
    <string name="prefs_summary_remove_menu_and_btn">移除底部快捷菜单与短信应用按钮</string>
    <string name="prefs_title_remove_menu_and_btn">移除菜单与按钮</string>
    <string name="prefs_title_systemAdSolution">智能服务(2024.02.19.10-release)</string>
    <string name="prefs_summary_remove_open_ads">移除系统应用的开屏广告</string>
    <string name="prefs_title_remove_open_ads">移除开屏广告</string>
</resources>