<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/prefs_title_update"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="BlockUpdate"
            android:summary="@string/prefs_summary_block_update"
            android:title="@string/prefs_title_block_update"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_title_security"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="RemoveWait"
            android:summary="@string/prefs_summary_remove_wait"
            android:title="@string/prefs_title_remove_wait"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_title_mms"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="RemoveMenuAndBtn"
            android:summary="@string/prefs_summary_remove_menu_and_btn"
            android:title="@string/prefs_title_remove_menu_and_btn"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_title_systemAdSolution"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="RemoveOpenAds"
            android:summary="@string/prefs_summary_remove_open_ads"
            android:title="@string/prefs_title_remove_open_ads"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>